# systemabilitymgr_samgr_lite

./: BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json  config.gni
communication/broadcast/: BUILD.gn
interfaces/kits/samgr/: common.h  iunknown.h  message.h  samgr_lite.h
samgr/: BUILD.gn
samgr/adapter/: BUILD.gn
samgr/adapter/cmsis/: thread_adapter.c
samgr/adapter/esp-idf/: queue_adapter.c  thread_adapter.c  time_adapter.c
samgr/adapter/posix/: queue_adapter.c  thread_adapter.c
samgr/source/: BUILD.gn  samgr_lite.c  samgr_lite_inner.h  task_manager.c
samgr_client/: BUILD.gn
samgr_client/source/: remote_register.c  remote_register_rpc.c
samgr_endpoint/: BUILD.gn
samgr_endpoint/source/: default_client.c  default_client_mini_adapter.c  default_client_rpc.c  endpoint.c  endpoint_rpc.c  samgr_mini_ipc_adapter.c  samgr_small_ipc_adapter.c
samgr_server/: BUILD.gn
samgr_server/source/: samgr_server.c  samgr_server_rpc.c
